--- a/portfolioCA/src/index.css
+++ b/portfolioCA/src/index.css
@@ -2,3 +2,10 @@
 body{
     font-family: "Poppins", sans-serif;
 }
+
+
+@theme {
+  --breakpoint-xs: 30rem;
+  --breakpoint-2xl: 100rem;
+  --breakpoint-3xl: 120rem;
+}
